tests/models/enum/unit/fail/max_length.rs
use dade::model;
#[model]
enum TestModel {
    #[field(max_length = 2)]
    Value
}
fn main() {}
